Fix alignment of search submit button
Resolves: GDZ-353

--- a/app/Resources/scss/sections/_search.scss
+++ b/app/Resources/scss/sections/_search.scss
@@ -220,7 +220,7 @@
     padding: 0;
     position: absolute;
     right: round(.75 * $grid);
-    top: round(.667 * $grid);
+    top: round(.75 * $grid);
     width: 1.5 * $grid;
     z-index: 9;
 
